--- a/CoollEventsWebApp/CoollEventsWebApp/Views/registrar/Index.cshtml
+++ b/CoollEventsWebApp/CoollEventsWebApp/Views/registrar/Index.cshtml
@@ -41,10 +41,10 @@
 
                 <div style="display: flex; font-family: sans-serif;margin-top: .5vh;">
                     <div class="sexo">
-                        <input id="Sexo" name="Sexo" type="radio" value="Masculino" checked /> Masculino
+                        <input id="Sexo" name="Sexo" type="radio" value="M" checked /> Masculino
                     </div>
                     <div style="margin-left: 5vw">
-                        <input id="Sexo" name="Sexo" type="radio" value="Feminino" /> Feminino
+                        <input id="Sexo" name="Sexo" type="radio" value="F" /> Feminino
                     </div>
                 </div>
             </div>
