--- a/CoollEventsWebApp/CoollEventsWebApp/Views/Entrar/Index.cshtml
+++ b/CoollEventsWebApp/CoollEventsWebApp/Views/Entrar/Index.cshtml
@@ -14,11 +14,11 @@
 
                 <img src="~/Resources/img/partyhat.png" />
                 <input type="text" id="Email" name="Email" placeholder="email" required/>
-                <input type="text" id="Senha" name="Senha" placeholder="senha" required/>
+                <input type="password" id="Senha" name="Senha" placeholder="senha" required/>
 
-                <input type="submit" value="Entrar" />
+                <input type="submit" value="Entrar" style="cursor: pointer"/>
             </form>
-            <a href="/registrar"> Ainda não possui conta? Cadastre-se </a>
+            <a href="/registrar" style="text-align: center"> Ainda não possui conta? Cadastre-se </a>
         </div>
     </div>
 </div>
