--- a/CoollEventsWebApp/CoollEventsWebApp/Views/Editar/Index.cshtml
+++ b/CoollEventsWebApp/CoollEventsWebApp/Views/Editar/Index.cshtml
@@ -55,6 +55,7 @@
     <div id="AllWrapper">
         <div id="leftside">
             <div id="user">
+                <a></a>
                 <img src="~/Resources/img/usericon.png" />
                 <div class="itemPerfil">
                     <h2 style="text-align: left; font-size: 1.2rem"> Nome </h2>
@@ -72,9 +73,9 @@
                 <a id="buttonEditar" href="/perfil/editar">
                     Editar dados
                 </a>
-            </div>*@
+                </div>*@
                 <div style="margin-top: 5vh">
-                    <input type="submit" id="buttonConfirmar" value="Confirmar" />
+                    <input type="submit" id="buttonConfirmar" onclick="return CheckForm()" value="Confirmar" />
                 </div>
             </div>
 
@@ -206,4 +207,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" type="text/javascript"></script>
 <script>
     $('#DataNascimento').mask('00/00/0000');
+
+    function CheckForm() {
+        if ($("#DataNascimento").val().substring(6) < 1900 || $("#DataNascimento").val().substring(6) > (new Date().getFullYear() - 18)) {
+            alert('Data de nascimento inválida. OBS: É obrigatório ter mais de 18 anos.');
+            return false;
+        }
+        else {
+            return true;
+        }
+    };
 </script>
