--- a/CoollEventsWebApp/CoollEventsWebApp/Views/coollayout.cshtml
+++ b/CoollEventsWebApp/CoollEventsWebApp/Views/coollayout.cshtml
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+
+    <script src="//code.jquery.com/jquery.min.js" type="text/javascript"></script>
     <link href="Resources/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="Resources/css/style.css" rel="stylesheet">
     <link href="Resources/color/default.css" rel="stylesheet">
     <link href="Resources/css/@ViewBag.Style" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon.ico">
     <style>
-        html, body { 
+        html, body {
             overflow-x: hidden;
         }
     </style>
@@ -34,14 +36,24 @@
                             <li><a title="team" href="/Index">Home</a></li>
                             <li><a title="services" href="/Sobre">Sobre</a></li>
                             <li><a title="works" href="/manutencao">Eventos</a></li>
-                            <li><a title="blog" href="/Entrar">Entrar</a></li>
                             <li><a title="contact" href="/manutencao">Contato</a></li>
-                            @{ 
+                            @{
+                                if (Session["idUsuario"] == null)
+                                {
+                                    <li><a title="blog" href="/Entrar">Entrar</a></li>
+                                }
+                            }
+
+
+                            @{
                                 if (Session["nomeUsuario"] != null)
                                 {
                                     <li><a title="Perfil" href="/perfil">@Session["nomeUsuario"].ToString()</a></li>
+                                    <li>@Html.ActionLink("Sair", "Index", "Logout", null, new { title = "logout", style = "color: ##ff9b8a" })</li>
                                 }
                             }
+
+
                         </ul>
                     </nav>
                 </div>
