--- a/CoollEventsWebApp/CoollEventsWebApp/Views/coollayout.cshtml
+++ b/CoollEventsWebApp/CoollEventsWebApp/Views/coollayout.cshtml
@@ -35,8 +35,8 @@
                         <ul id="menu-main" class="nav">
                             <li><a title="team" href="/Index">Home</a></li>
                             <li><a title="services" href="/Sobre">Sobre</a></li>
-                            <li><a title="works" href="/manutencao">Eventos</a></li>
-                            <li><a title="contact" href="/manutencao">Contato</a></li>
+                            <li><a title="works" href="/eventos">Eventos</a></li>
+                            <li><a title="contato" href="/contato">Contato</a></li>
                             @{
                                 if (Session["idUsuario"] == null)
                                 {
