--- a/CoollEventsWebApp/CoollEventsWebApp/Views/Tarefas/Index.cshtml
+++ b/CoollEventsWebApp/CoollEventsWebApp/Views/Tarefas/Index.cshtml
@@ -44,7 +44,7 @@
             {
                 <input type="text" name="Tarefa" id="Tarefa" placeholder="Tarefa"/>
                 <input type="submit" id="submit" value="Confirmar" />
-                @Html.ActionLink("Finalizar tarefas", "Index", "Eventos");
+                @Html.ActionLink("Finalizar tarefas", "Index", "Eventos", new { style = "margin: auto; color: #05a8ff" });
             }
         </div>
     </div>
