--- a/CoollEventsWebApp/CoollEventsWebApp/Views/TrocarSenha/Index.cshtml
+++ b/CoollEventsWebApp/CoollEventsWebApp/Views/TrocarSenha/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "CoollEvents: Trocar senha";
     Layout = "~/Views/coollayout.cshtml";
     ViewBag.Style = "_trocarsenha.css";
 }
